fix responsive design

--- a/html/board.html
+++ b/html/board.html
@@ -198,7 +198,7 @@
                     </div>
                 </div>
             </section>
-            <div class="fiel-required">
+            <div class="field-required">
                   <span><span class="span-star">*</span>This field is required</span>
                 <div class="button-footer-addTask">
                     <button class="btn-footer-create btn" onclick="addOrEditTask()">OK
