fix responsive design

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -94,8 +94,8 @@
         </section>
         <div class="footer">
             <div class="required-field-footer">
-                <span class="span-star">*</span>
-                <span>This field is required</span>
+                <span><span class="span-star">* </span>This field is required</span>
+                
             </div>
             <div class="button-footer">
                 <button class="btn-footer-clear btn" onclick="clearInputs()" id="btn-clear">Clear x</button>
