--- a/html/add_task.html
+++ b/html/add_task.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/add_task.css">
     <link rel="stylesheet" href="../css/add_task_2.css">
     <link rel="stylesheet" href="../assets/templates/css/add_task_mediaqueries.css">
-    <script src="../js/add_task.js"></script>
+    <script src="../js/add_task_contacts.js"></script>
     <script src="../js/add_task_2.js"></script>
     <script src="../js/add_task_3.js"></script>
     <script src="../assets/templates/js/add_task_template.js"></script>
@@ -30,7 +30,7 @@
             <div class="content-left">
                 <form class="flex8gap" onsubmit="addTask(); return false">
                     <label for="input-title">Title<span class="span-star">*</span></label>
-                    <input type="text" id="input-title" placeholder="Enter a Title" required>
+                    <input type="text" autocomplete="off" id="input-title" placeholder="Enter a Title" required>
                     <span id="error-message-title" class="error-message">Field required</span>
                 </form>
                 <div class="flex8gap">
@@ -83,9 +83,9 @@
                 <div class="flex8gap">
                     <label for="input-subtask">Subtasks</label>
                     <div class="input-container">
-                        <input type="text" id="input-subtask" placeholder="Add new subtask"><button class="add-button"
-                            id="add-button-subtask" onclick="addSubTask()">+</button>
-                            <span id="error-message-subtasks" class="error-message">please fill in</span>
+                        <input type="text" autocomplete="off" id="input-subtask" placeholder="Add new subtask"><button
+                            class="add-button" id="add-button-subtask" onclick="addSubTask()">+</button>
+                        <span id="error-message-subtasks" class="error-message">please fill in</span>
                     </div>
                     <div id="show-subtask">
                     </div>
@@ -95,7 +95,7 @@
         <div class="footer">
             <div class="required-field-footer">
                 <span><span class="span-star">* </span>This field is required</span>
-                
+
             </div>
             <div class="button-footer">
                 <button class="btn-footer-clear btn" onclick="clearInputs()" id="btn-clear">Clear x</button>
